--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
 [project]
 name = "cell-neighbors"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.0.1"
+description = "voyager-based kNN for single-cell data"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "voyager"
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
