--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -1,12 +1,24 @@
-# .github/workflows/publish.yml
 name: Publish
 
 on:
+  # Pre-releases from CLI tag pushes (e.g., v0.3.0-rc1)
+  push:
+    tags:
+      - 'v*rc*'
+  # Real releases from the GitHub Releases UI (must be non-prerelease)
   release:
     types: [published]
 
 jobs:
   publish:
+    # Run on rc tag pushes, or on release events that are NOT "prerelease"
+    # AND whose tag does not contain 'rc'
+    if: >
+      github.event_name == 'push' ||
+      (github.event_name == 'release' &&
+       !github.event.release.prerelease &&
+       !contains(github.event.release.tag_name, 'rc'))
+
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -16,15 +28,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+
       - name: Set up Python
         run: uv python install 3.13
+
       - name: Build
         run: uv build
+
       - name: Smoke test (wheel)
         run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
+
       - name: Smoke test (sdist)
         run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
-      - name: Publish to PyPI
-        run: uv publish
+
+      # Pre-releases: triggered by CLI tag push (refs/tags/v*rc*)
+      - name: Publish to TestPyPI (rc tags)
+        if: github.event_name == 'push'
+        run: uv publish \
+               --publish-url https://test.pypi.org/legacy/ \
+               --check-url   https://test.pypi.org/simple
+
+      # Real releases: triggered by GitHub Release publication (non-prerelease, non-rc)
+      - name: Publish to PyPI (GitHub Release)
+        if: github.event_name == 'release'
+        run: uv publish --check-url https://pypi.org/simple
