--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cell-neighbors"
-version = "0.0.1"
+version = "0.0.2-rc0"
 description = "voyager-based kNN for single-cell data"
 readme = "README.md"
 requires-python = ">=3.10"
