--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -39,10 +39,10 @@ jobs:
         run: uv build
 
       - name: Smoke test (wheel)
-        run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
+        run: uv run --isolated --no-project --with dist/*.whl tests/pypi_release_smoke_test.py
 
       - name: Smoke test (sdist)
-        run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
+        run: uv run --isolated --no-project --with dist/*.tar.gz tests/pypi_release_smoke_test.py
 
       # Pre-releases: triggered by CLI tag push (refs/tags/v*rc*)
       - name: Publish to TestPyPI (rc tags)
