--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cell-neighbors"
-version = "0.0.2-rc.1"
+version = "0.0.2-rc.3"
 description = "voyager-based kNN for single-cell data"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -11,3 +11,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/cell_neighbors"]
