--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -38,6 +38,11 @@ jobs:
       - name: Build
         run: uv build
 
+      - name: Verify dist contents
+        run: |
+          echo "=== dist contents ==="
+          ls -lah dist || echo "No dist folder found"
+
       - name: Smoke test (wheel)
         run: uv run --isolated --no-project --with dist/*.whl tests/pypi_release_smoke_test.py
 
@@ -47,9 +52,15 @@ jobs:
       # Pre-releases: triggered by CLI tag push (refs/tags/v*rc*)
       - name: Publish to TestPyPI (rc tags)
         if: github.event_name == 'push'
-        run: uv publish \
-               --publish-url https://test.pypi.org/legacy/ \
-               --check-url   https://test.pypi.org/simple
+        # run: uv publish \
+        #        --publish-url https://test.pypi.org/legacy/ \
+        #        --check-url   https://test.pypi.org/simple
+        run: |
+            echo "Current dir: $(pwd)"
+            echo "Listing dist:"
+            ls -lah dist
+            uv publish --publish-url https://test.pypi.org/legacy/ --check-url https://test.pypi.org/simple
+        working-directory: .
 
       # Real releases: triggered by GitHub Release publication (non-prerelease, non-rc)
       - name: Publish to PyPI (GitHub Release)
