--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "voyager-based kNN for single-cell data"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "voyager"
+    "adata-query",
+    "anndata",
+    "scanpy",
+    "voyager",
 ]
 
 [build-system]
