--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "cell-neighbors"
 version = "0.0.2+dev"
 description = "voyager-based kNN for single-cell data"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-    "adata-query",
+    "adata-query>=0.2.1",
     "anndata",
     "scanpy",
     "voyager",
