--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "adata-query>=0.2.1",
     "anndata",
+    "pandas",
     "scanpy",
     "voyager",
 ]
